benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_Compare_CompareUnequal_iter1_error.log
=== Verification Error - Iteration 1 ===
File: benchmarks/verus/bignum/files/bignum_Compare_CompareUnequal.rs
Time: 2025-09-15 10:55:26

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:40:12
   |
40 |       if s@[start] != '0' {
   |            ^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:50:25
   |
50 |           result.push(s@[j]);
   |                         ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:93:12
   |
93 |       if s@[start] != '0' {
   |            ^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:103:25
    |
103 |           result.push(s@[j]);
    |                         ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:134:24
    |
134 |             if s1_norm@[i] > s2_norm@[i] {
    |                        ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:134:38
    |
134 |             if s1_norm@[i] > s2_norm@[i] {
    |                                      ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:136:31
    |
136 |             } else if s1_norm@[i] < s2_norm@[i] {
    |                               ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:136:45
    |
136 |             } else if s1_norm@[i] < s2_norm@[i] {
    |                                             ^^^

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0608`.

--------------------------------------------------------------------------------

Additional Output:
error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:40:12
   |
40 |       if s@[start] != '0' {
   |            ^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:50:25
   |
50 |           result.push(s@[j]);
   |                         ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:93:12
   |
93 |       if s@[start] != '0' {
   |            ^^^^^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:103:25
    |
103 |           result.push(s@[j]);
    |                         ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:134:24
    |
134 |             if s1_norm@[i] > s2_norm@[i] {
    |                        ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:134:38
    |
134 |             if s1_norm@[i] > s2_norm@[i] {
    |                                      ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:136:31
    |
136 |             } else if s1_norm@[i] < s2_norm@[i] {
    |                               ^^^

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_Compare_CompareUnequal_impl.rs:136:45
    |
136 |             } else if s1_norm@[i] < s2_norm@[i] {
    |                                             ^^^

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0608`.
